--- a/C++/ConsoleDemo/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/C++/ConsoleDemo/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="C:\Users\USER\Downloads\cryptopp\cryptopp.dll">
+      <Filter>Header Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
