--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ Python/__pycache__/**
 Python/mini_project/**/build/**
 Python/mini_project/**/dist/**
 Python/media/**
+
+# HTML
+HTML/*.mp4
+HTML/*.mp3
